gnome-volume-control: compile with GSEAL

https://bugzilla.gnome.org/show_bug.cgi?id=612479